Adds some more tests for direct file import, fixes path construction bug.